added smooth scroll and ids to sections

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="header">
+    <header id="top" class="header">
       <div class="container">
         <div class="row">
           <a href="index.html" class="logo">
@@ -22,7 +22,7 @@
           <nav class="header-nav">
             <ul class="header-nav__list">
               <li class="header-nav__item">
-                <a href="#" class="header-nav__link">О нас</a>
+                <a href="#about-us" class="header-nav__link">О нас</a>
               </li>
               <li class="header-nav__item">
                 <a href="#" class="header-nav__link">Торты</a>
@@ -34,13 +34,13 @@
                 <a href="#" class="header-nav__link">Десерты</a>
               </li>
               <li class="header-nav__item">
-                <a href="#" class="header-nav__link">Доставка и B2B</a>
+                <a href="#delivery" class="header-nav__link">Доставка и B2B</a>
               </li>
               <li class="header-nav__item">
-                <a href="#" class="header-nav__link">Отзывы</a>
+                <a href="#reviews" class="header-nav__link">Отзывы</a>
               </li>
               <li class="header-nav__item">
-                <a href="#" class="header-nav__link">Контакты</a>
+                <a href="#contacts" class="header-nav__link">Контакты</a>
               </li>
             </ul>
           </nav>
@@ -108,7 +108,7 @@
         <!-- /.row -->
       </section>
       <!-- ./hero -->
-      <section class="section about-us">
+      <section id="about-us" class="section about-us">
         <div class="container about-us__container">
           <div class="about-us__row">
             <div class="about-us__text-content">
@@ -212,7 +212,7 @@
       <!-- ./about-us -->
       <section class="section cakes"></section>
       <!-- /.section cakes -->
-      <section class="delivery section">
+      <section id="delivery" class="delivery section">
         <div class="container">
           <h2 class="section-title delivery__section-title">Доставка</h2>
           <div class="row delivery__row">
@@ -301,7 +301,7 @@
         <!-- /.container -->
       </section>
       <!-- ./delivery -->
-      <section class="section reviews">
+      <section id="reviews" class="section reviews">
         <div class="container">
           <h2 class="section-title reviews__section-title">Отзывы</h2>
 
@@ -414,12 +414,12 @@
         <!-- /.container -->
       </section>
       <!-- /.section reviews -->
-      <section class="section contact-us">
+      <section id="contacts" class="section contact-us">
         <div class="container contact-us__container">
           <h2 class="section-title contact-us__section-title">
             Связаться с нами
           </h2>
-          <a href="index.html" class="contact-us__logo logo"
+          <a href="#top" class="contact-us__logo logo"
             ><img
               src="img/logo.svg"
               alt="Be My Guest Logo"
