--- a/index.html
+++ b/index.html
@@ -210,8 +210,74 @@
         <!-- /.container -->
       </section>
       <!-- ./about-us -->
-      <section class="section cakes"></section>
+      <section class="section cakes">
+        <div class="container">
+          <h2 class="section-title cakes__section-title">Торты</h2>
+          <div class="tab-container cakes__tab-container">
+            <div class="tab">
+              <input
+                class="tab__input"
+                type="radio"
+                id="cakes-tab1"
+                name="tab-group"
+                checked
+              />
+              <label for="cakes-tab1" class="tab__title">Муссовые</label>
+              <div class="tab__content">
+                <!-- Slider main container -->
+                <div
+                  class="swiper-container cakes__slider cakes__slider--biscuit"
+                >
+                  <!-- Additional required wrapper -->
+                  <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide cakes__slider-slide">Slide 1</div>
+                    <div class="swiper-slide cakes__slider-slide">Slide 2</div>
+                    <div class="swiper-slide cakes__slider-slide">Slide 3</div>
+                  </div>
+                  <div class="swiper-pagination cakes__slider-pagination"></div>
+
+                  <button
+                    class="swiper-button-prev cakes__slider-button-prev"
+                  ></button>
+                  <button
+                    class="swiper-button-next cakes__slider-button-next"
+                  ></button>
+                </div>
+              </div>
+            </div>
+            <div class="tab">
+              <input
+                class="tab__input"
+                type="radio"
+                id="cakes-tab2"
+                name="tab-group"
+              />
+              <label for="cakes-tab2" class="tab__title">MINI-Кейки</label>
+              <div class="tab__content">Два</div>
+            </div>
+            <div class="tab">
+              <input
+                class="tab__input"
+                type="radio"
+                id="cakes-tab3"
+                name="tab-group"
+              />
+              <label for="cakes-tab3" class="tab__title">Бисквитные</label>
+              <div class="tab__content">Три</div>
+            </div>
+          </div>
+          <!-- ./tab-container -->
+        </div>
+        <!-- /.container -->
+      </section>
       <!-- /.section cakes -->
+      <section class="section decoration"></section>
+      <!-- /.section decoration -->
+      <section class="section macaroon"></section>
+      <!-- /.section macaroon -->
+      <section class="section desserts"></section>
+      <!-- /.section desserts -->
       <section id="delivery" class="delivery section">
         <div class="container">
           <h2 class="section-title delivery__section-title">Доставка</h2>
