--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="#about-us" class="header-nav__link">О нас</a>
               </li>
               <li class="header-nav__item">
-                <a href="#" class="header-nav__link">Торты</a>
+                <a href="#cakes" class="header-nav__link">Торты</a>
               </li>
               <li class="header-nav__item">
                 <a href="#" class="header-nav__link">Макаронс</a>
@@ -210,7 +210,7 @@
         <!-- /.container -->
       </section>
       <!-- ./about-us -->
-      <section class="section cakes">
+      <section id="cakes" class="section cakes">
         <div class="container">
           <h2 class="section-title cakes__section-title">Торты</h2>
           <p class="cakes__description">
