--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/glightbox.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -236,11 +237,16 @@
                     <!-- Slides -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/muss/new-cakes-1.jpg"
-                          alt="ДЖИММІ"
-                        />
+                        <a
+                          href="img/cakes/muss/new-cakes-1.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/muss/new-cakes-1.jpg"
+                            alt="ДЖИММІ"
+                          />
+                        </a>
                         <h5 class="card__title">джиммі</h5>
                         <ul class="card__list">
                           <li class="card__list-item">
@@ -263,11 +269,16 @@
                     <!-- ./cakes__slider-slide -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/muss/new-cakes-2.jpg"
-                          alt="ЯГІДНИЙ ЙОГУРТ"
-                        />
+                        <a
+                          href="img/cakes/muss/new-cakes-2.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/muss/new-cakes-2.jpg"
+                            alt="ЯГІДНИЙ ЙОГУРТ"
+                          />
+                        </a>
                         <h5 class="card__title">ягідний йогурт</h5>
                         <ul class="card__list">
                           <li class="card__list-item">
@@ -287,11 +298,16 @@
                     <!-- ./cakes__slider-slide -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/muss/new-cakes-3.jpg"
-                          alt="СНІК"
-                        />
+                        <a
+                          href="img/cakes/muss/new-cakes-2.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/muss/new-cakes-3.jpg"
+                            alt="СНІК"
+                          />
+                        </a>
                         <h5 class="card__title">снік</h5>
                         <ul class="card__list">
                           <li class="card__list-item">шоколадний бісквіт</li>
@@ -308,11 +324,16 @@
                     <!-- ./cakes__slider-slide -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/muss/new-cakes-4.jpg"
-                          alt="мей"
-                        />
+                        <a
+                          href="img/cakes/muss/new-cakes-4.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/muss/new-cakes-4.jpg"
+                            alt="мей"
+                          />
+                        </a>
                         <h5 class="card__title">мей</h5>
                         <ul class="card__list">
                           <li class="card__list-item">лимонний кекс</li>
@@ -333,11 +354,16 @@
                     <!-- ./cakes__slider-slide -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/muss/new-cakes-5.jpg"
-                          alt="РАФАЕЛЬ"
-                        />
+                        <a
+                          href="img/cakes/muss/new-cakes-5.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/muss/new-cakes-5.jpg"
+                            alt="РАФАЕЛЬ"
+                          />
+                        </a>
                         <h5 class="card__title">РАФАЕЛЬ</h5>
                         <ul class="card__list">
                           <li class="card__list-item">кокосовий бісквіт</li>
@@ -356,11 +382,16 @@
                     <!-- ./cakes__slider-slide -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/muss/new-cakes-6.jpg"
-                          alt="ГРЕЙС"
-                        />
+                        <a
+                          href="img/cakes/muss/new-cakes-6.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/muss/new-cakes-6.jpg"
+                            alt="ГРЕЙС"
+                          />
+                        </a>
                         <h5 class="card__title">ГРЕЙС</h5>
                         <ul class="card__list">
                           <li class="card__list-item">
@@ -411,12 +442,16 @@
                     <!-- Slides -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/mini/mini-cakes-1.jpg"
-                          alt="
-ЯГІДНИЙ ЙОГУРТ"
-                        />
+                        <a
+                          href="img/cakes/mini/mini-cakes-1.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/mini/mini-cakes-1.jpg"
+                            alt="ЯГІДНИЙ ЙОГУРТ"
+                          />
+                        </a>
                         <h5 class="card__title">ЯГІДНИЙ ЙОГУРТ</h5>
                         <ul class="card__list">
                           <li class="card__list-item">
@@ -437,12 +472,16 @@
                     <!-- ./cakes__slider-slide -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/mini/mini-cakes-2.jpg"
-                          alt="
-ДЖИММІ"
-                        />
+                        <a
+                          href="img/cakes/mini/mini-cakes-2.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/mini/mini-cakes-2.jpg"
+                            alt="ДЖИММІ"
+                          />
+                        </a>
                         <h5 class="card__title">ДЖИММІ</h5>
                         <ul class="card__list">
                           <li class="card__list-item">
@@ -465,12 +504,16 @@
                     <!-- ./cakes__slider-slide -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/mini/mini-cakes-3.jpg"
-                          alt="
-БЕРНАРД"
-                        />
+                        <a
+                          href="img/cakes/mini/mini-cakes-3.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/mini/mini-cakes-3.jpg"
+                            alt="БЕРНАРД"
+                          />
+                        </a>
                         <h5 class="card__title">БЕРНАРД</h5>
                         <ul class="card__list">
                           <li class="card__list-item">
@@ -491,11 +534,16 @@
                     <!-- ./cakes__slider-slide -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/mini/mini-cakes-4.jpg"
-                          alt="мей"
-                        />
+                        <a
+                          href="img/cakes/mini/mini-cakes-4.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/mini/mini-cakes-4.jpg"
+                            alt="мей"
+                          />
+                        </a>
                         <h5 class="card__title">мей</h5>
                         <ul class="card__list">
                           <li class="card__list-item">лимонний кекс</li>
@@ -516,11 +564,16 @@
                     <!-- ./cakes__slider-slide -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/mini/mini-cakes-5.jpg"
-                          alt="РАФАЕЛЬ"
-                        />
+                        <a
+                          href="img/cakes/mini/mini-cakes-5.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/mini/mini-cakes-5.jpg"
+                            alt="РАФАЕЛЬ"
+                          />
+                        </a>
                         <h5 class="card__title">СНІК</h5>
                         <ul class="card__list">
                           <li class="card__list-item">шоколадний бісквіт</li>
@@ -539,11 +592,16 @@
                     <!-- ./cakes__slider-slide -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/mini/mini-cakes-6.jpg"
-                          alt="ГРЕЙС"
-                        />
+                        <a
+                          href="img/cakes/mini/mini-cakes-6.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/mini/mini-cakes-6.jpg"
+                            alt="ГРЕЙС"
+                          />
+                        </a>
                         <h5 class="card__title">ГРЕЙС</h5>
                         <ul class="card__list">
                           <li class="card__list-item">
@@ -598,11 +656,16 @@
                     <!-- Slides -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/biscuit/biscuit-1.jpg"
-                          alt="ДЖИММІ"
-                        />
+                        <a
+                          href="img/cakes/biscuit/biscuit-1.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/biscuit/biscuit-1.jpg"
+                            alt="ДЖИММІ"
+                          />
+                        </a>
                         <h5 class="card__title">джиммі</h5>
                         <ul class="card__list">
                           <li class="card__list-item">
@@ -625,11 +688,16 @@
                     <!-- ./cakes__slider-slide -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/biscuit/biscuit-2.jpg"
-                          alt="ЯГІДНИЙ ЙОГУРТ"
-                        />
+                        <a
+                          href="img/cakes/biscuit/biscuit-2.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/biscuit/biscuit-2.jpg"
+                            alt="ЯГІДНИЙ ЙОГУРТ"
+                          />
+                        </a>
                         <h5 class="card__title">ягідний йогурт</h5>
                         <ul class="card__list">
                           <li class="card__list-item">
@@ -649,11 +717,16 @@
                     <!-- ./cakes__slider-slide -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/biscuit/biscuit-3.jpg"
-                          alt="СНІК"
-                        />
+                        <a
+                          href="img/cakes/biscuit/biscuit-3.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/biscuit/biscuit-3.jpg"
+                            alt="СНІК"
+                          />
+                        </a>
                         <h5 class="card__title">снік</h5>
                         <ul class="card__list">
                           <li class="card__list-item">шоколадний бісквіт</li>
@@ -670,11 +743,16 @@
                     <!-- ./cakes__slider-slide -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/biscuit/biscuit-4.jpg"
-                          alt="мей"
-                        />
+                        <a
+                          href="img/cakes/biscuit/biscuit-4.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/biscuit/biscuit-4.jpg"
+                            alt="мей"
+                          />
+                        </a>
                         <h5 class="card__title">мей</h5>
                         <ul class="card__list">
                           <li class="card__list-item">лимонний кекс</li>
@@ -695,11 +773,16 @@
                     <!-- ./cakes__slider-slide -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/biscuit/biscuit-5.jpg"
-                          alt="РАФАЕЛЬ"
-                        />
+                        <a
+                          href="img/cakes/biscuit/biscuit-5.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/biscuit/biscuit-5.jpg"
+                            alt="РАФАЕЛЬ"
+                          />
+                        </a>
                         <h5 class="card__title">РАФАЕЛЬ</h5>
                         <ul class="card__list">
                           <li class="card__list-item">кокосовий бісквіт</li>
@@ -718,11 +801,16 @@
                     <!-- ./cakes__slider-slide -->
                     <div class="swiper-slide cakes__slider-slide">
                       <div class="card cakes__card">
-                        <img
-                          class="card__image"
-                          src="img/cakes/biscuit/biscuit-6.jpg"
-                          alt="ГРЕЙС"
-                        />
+                        <a
+                          href="img/cakes/biscuit/biscuit-6.jpg"
+                          class="card__image-link glightbox"
+                        >
+                          <img
+                            class="card__image"
+                            src="img/cakes/biscuit/biscuit-6.jpg"
+                            alt="ГРЕЙС"
+                          />
+                        </a>
                         <h5 class="card__title">ГРЕЙС</h5>
                         <ul class="card__list">
                           <li class="card__list-item">
@@ -1060,6 +1148,7 @@
       <!-- /.section contact-us -->
     </main>
     <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/glightbox.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
