add: macaroon section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="#cakes" class="header-nav__link">Торты</a>
               </li>
               <li class="header-nav__item">
-                <a href="#" class="header-nav__link">Макаронс</a>
+                <a href="#macaroon" class="header-nav__link">Макаронс</a>
               </li>
               <li class="header-nav__item">
                 <a href="#" class="header-nav__link">Десерты</a>
@@ -855,7 +855,111 @@
       <!-- /.section cakes -->
       <section class="section decoration"></section>
       <!-- /.section decoration -->
-      <section class="section macaroon"></section>
+      <section id="macaroon" class="section macaroon">
+        <div class="container">
+          <h2 class="section-title macaroon__section-title">Макаронс</h2>
+
+          <div class="row macaroon__row">
+            <div class="macaroon__list-wrap">
+              <p class="macaroon__description">
+                Наявність смаків уточнюйте у менеджера!
+              </p>
+              <p class="macaroon__description">
+                Зазвичай в наявності є 8-10 смаків макарон.
+              </p>
+              <ul class="macaroon__list">
+                <li class="macaroon__list-item list-item">ваніль</li>
+                <li class="macaroon__list-item list-item">шоко</li>
+                <li class="macaroon__list-item list-item">солона карамель</li>
+                <li class="macaroon__list-item list-item">арахіс-малина</li>
+                <li class="macaroon__list-item list-item">фісташка</li>
+                <li class="macaroon__list-item list-item">ананас-лемонграс</li>
+                <li class="macaroon__list-item list-item">матча-вишня</li>
+                <li class="macaroon__list-item list-item">лайм-базилік</li>
+                <li class="macaroon__list-item list-item">бейліз-кава</li>
+                <li class="macaroon__list-item list-item">манго-маракуйя</li>
+                <li class="macaroon__list-item list-item">чізкейк нью йорк</li>
+                <li class="macaroon__list-item list-item">смородина-фіалка</li>
+                <li class="macaroon__list-item list-item">грейпфрут</li>
+                <li class="macaroon__list-item list-item">
+                  тархуновий лимонад
+                </li>
+                <li class="macaroon__list-item list-item">лате з корицею</li>
+                <li class="macaroon__list-item list-item">малина</li>
+                <li class="macaroon__list-item list-item">м’ята</li>
+                <li class="macaroon__list-item list-item">лаванда</li>
+                <li class="macaroon__list-item list-item">лимон</li>
+                <li class="macaroon__list-item list-item">кокос</li>
+                <li class="macaroon__list-item list-item">банан</li>
+                <li class="macaroon__list-item list-item">ліщина</li>
+                <li class="macaroon__list-item list-item">
+                  чай earl grey з кунжутним праліне
+                </li>
+                <li class="macaroon__list-item list-item">марун</li>
+                <li class="macaroon__list-item list-item">дор блю з грушею</li>
+                <li class="macaroon__list-item list-item">білі гриби</li>
+                <li class="macaroon__list-item list-item">
+                  болгарський перець-пармезан
+                </li>
+              </ul>
+            </div>
+            <!-- /.macaroon__list-wrap -->
+            <div class="macaroon__photo-container">
+              <div class="macaroon__photo-wrap">
+                <img
+                  src="img/macaroon/macaroon-1.jpg"
+                  alt="Photo Macaroons"
+                  class="macaroon__photo"
+                />
+              </div>
+              <!-- /.macaroon__photo-wrap -->
+              <div class="macaroon__photo-wrap">
+                <img
+                  src="img/macaroon/macaroon-2.jpg"
+                  alt="Photo Macaroons"
+                  class="macaroon__photo"
+                />
+              </div>
+              <!-- /.macaroon__photo-wrap -->
+              <div class="macaroon__photo-wrap">
+                <img
+                  src="img/macaroon/macaroon-3.jpg"
+                  alt="Photo Macaroons"
+                  class="macaroon__photo"
+                />
+              </div>
+              <!-- /.macaroon__photo-wrap -->
+              <div class="macaroon__photo-wrap">
+                <img
+                  src="img/macaroon/macaroon-4.jpg"
+                  alt="Photo Macaroons"
+                  class="macaroon__photo"
+                />
+              </div>
+              <!-- /.macaroon__photo-wrap -->
+              <div class="macaroon__photo-wrap">
+                <img
+                  src="img/macaroon/macaroon-5.jpg"
+                  alt="Photo Macaroons"
+                  class="macaroon__photo"
+                />
+              </div>
+              <!-- /.macaroon__photo-wrap -->
+              <div class="macaroon__photo-wrap">
+                <img
+                  src="img/macaroon/macaroon-6.jpg"
+                  alt="Photo Macaroons"
+                  class="macaroon__photo"
+                />
+              </div>
+              <!-- /.macaroon__photo-wrap -->
+            </div>
+            <!-- /.macaroon__photo-wrap -->
+          </div>
+          <!-- /.row macaroon__row -->
+        </div>
+        <!-- /.container -->
+      </section>
       <!-- /.section macaroon -->
       <section class="section desserts"></section>
       <!-- /.section desserts -->
