added dessert navigation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="#macaroon" class="header-nav__link">Макаронс</a>
               </li>
               <li class="header-nav__item">
-                <a href="#" class="header-nav__link">Десерты</a>
+                <a href="#dessert" class="header-nav__link">Десерты</a>
               </li>
               <li class="header-nav__item">
                 <a href="#delivery" class="header-nav__link">Доставка и B2B</a>
@@ -961,8 +961,8 @@
         <!-- /.container -->
       </section>
       <!-- /.section macaroon -->
-      <section class="section desserts"></section>
-      <!-- /.section desserts -->
+      <section id="dessert" class="section dessert"></section>
+      <!-- /.section dessert -->
       <section id="delivery" class="delivery section">
         <div class="container">
           <h2 class="section-title delivery__section-title">Доставка</h2>
