fix: minor html fix

--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
       <!-- /.section macaroon -->
       <section id="dessert" class="section dessert"></section>
       <!-- /.section dessert -->
-      <section id="delivery" class="delivery section">
+      <section id="delivery" class="section delivery">
         <div class="container">
           <h2 class="section-title delivery__section-title">Доставка</h2>
           <div class="row delivery__row">
@@ -1051,7 +1051,7 @@
         </div>
         <!-- /.container -->
       </section>
-      <!-- ./delivery -->
+      <!-- ./section delivery -->
       <section id="reviews" class="section reviews">
         <div class="container">
           <h2 class="section-title reviews__section-title">Отзывы</h2>
