--- a/index.html
+++ b/index.html
@@ -1178,11 +1178,7 @@
               alt="Be My Guest Logo"
               class="contact-us__logo-img"
           /></a>
-          <form
-            method="POST"
-            id="formMain"
-            class="form contact-us__form"
-          >
+          <form method="POST" id="formMain" class="form contact-us__form">
             <h4 class="form__title">Заполните форму для заказа</h4>
             <span class="form__text">И мы свяжемся с вами</span>
             <div class="form__input-block">
@@ -1260,6 +1256,10 @@
       </section>
       <!-- /.section contact-us -->
     </main>
+    <footer class="footer">
+      <div class="container"></div>
+      <!-- /.container -->
+    </footer>
     <div class="modal">
       <div class="modal__window">
         <form id="formModal" method="POST" class="form modal__form">
@@ -1324,6 +1324,9 @@
       <!-- /.modal__window modal__window--active -->
     </div>
     <!-- /.modal modal--active -->
+    <button class="top-btn" id="toTopBtn" title="Наверх">
+      <img class="top-btn__icon" src="img/arrow-up.svg" alt="Icon: To top" />
+    </button>
     <script src="https://unpkg.com/imask"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
