add footer adaptive

--- a/index.html
+++ b/index.html
@@ -1257,7 +1257,83 @@
       <!-- /.section contact-us -->
     </main>
     <footer class="footer">
-      <div class="container"></div>
+      <div class="container">
+        <div class="row footer__row-main">
+          <a href="#top" class="logo">
+            <img class="footer__logo logo__img" src="img/logo.svg" alt="Logo" />
+          </a>
+          <nav class="footer__nav">
+            <ul class="footer__nav-list">
+              <li class="footer__nav-list-item">
+                <a href="#about-us" class="footer__nav-link">О нас</a>
+              </li>
+              <li class="footer__nav-list-item">
+                <a href="#cakes" class="footer__nav-link">Торты</a>
+              </li>
+              <li class="footer__nav-list-item">
+                <a href="#macaroon" class="footer__nav-link">Макаронс</a>
+              </li>
+              <li class="footer__nav-list-item">
+                <a href="#dessert" class="footer__nav-link">Десерты</a>
+              </li>
+              <li class="footer__nav-list-item">
+                <a href="#delivery" class="footer__nav-link">Доставка и B2B</a>
+              </li>
+              <li class="footer__nav-list-item">
+                <a href="#reviews" class="footer__nav-link">Отзывы</a>
+              </li>
+              <li class="footer__nav-list-item">
+                <a href="#contacts" class="footer__nav-link">Контакты</a>
+              </li>
+              <li class="footer__nav-list-item footer__nav-socials-wrapper">
+                <a href="#" class="footer__nav-social"
+                  ><img
+                    class="footer__nav-social-icon"
+                    src="img/facebook.svg"
+                    alt="Icon: Facebook"
+                /></a>
+                <a href="#" class="footer__nav-social"
+                  ><img
+                    class="footer__nav-social-icon"
+                    src="img/instagram.svg"
+                    alt="Icon: Instagram"
+                /></a>
+                <a href="#" class="footer__nav-social"
+                  ><img
+                    class="footer__nav-social-icon"
+                    src="img/google-maps.svg"
+                    alt="Icon: Google Maps"
+                /></a>
+              </li>
+            </ul>
+          </nav>
+          <div class="footer__contacts">
+            <button class="footer__order-button button" data-toggle="modal">
+              Заказать
+            </button>
+            <div class="footer__contacts-group contacts-group">
+              <a href="tel:+380673253955" class="contacts-group__item"
+                >+38 (067) 325 39 55</a
+              >
+              <a href="mailto:" class="contacts-group__item">mail@mail.ru</a>
+            </div>
+            <!-- ./contacts-group -->
+          </div>
+          <!-- /.footer__contacts -->
+        </div>
+        <!-- /.row -->
+        <div class="row footer__row footer__policy">
+          <span class="footer__policy-text"
+            >© 2020 BeMyGuest Bakery. Все права защищены.</span
+          >
+          <span class="footer__policy-text footer__author-text"
+            >Страница создана<a href="webst.name" class="footer__author-link">
+              webst.name</a
+            ></span
+          >
+        </div>
+        <!-- /.row footer__row privacy -->
+      </div>
       <!-- /.container -->
     </footer>
     <div class="modal">
