--- a/index.html
+++ b/index.html
@@ -1286,19 +1286,25 @@
                 <a href="#contacts" class="footer__nav-link">Контакты</a>
               </li>
               <li class="footer__nav-list-item footer__nav-socials-wrapper">
-                <a href="#" class="footer__nav-social"
+                <a
+                  href="https://www.facebook.com/BeMyGuestBakery"
+                  class="footer__nav-social"
                   ><img
                     class="footer__nav-social-icon"
                     src="img/facebook.svg"
                     alt="Icon: Facebook"
                 /></a>
-                <a href="#" class="footer__nav-social"
+                <a
+                  href="http://instagram.com/bemyguestbakery"
+                  class="footer__nav-social"
                   ><img
                     class="footer__nav-social-icon"
                     src="img/instagram.svg"
                     alt="Icon: Instagram"
                 /></a>
-                <a href="#" class="footer__nav-social"
+                <a
+                  href="https://g.page/BeMyGuestBakery?share"
+                  class="footer__nav-social"
                   ><img
                     class="footer__nav-social-icon"
                     src="img/google-maps.svg"
