cakes slider fix

--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
         <!-- /.container -->
       </section>
       <!-- /.section cakes -->
-      <section class="section decoration"></section>
+      <!-- <section class="section decoration"></section> -->
       <!-- /.section decoration -->
       <section id="macaroon" class="section macaroon">
         <div class="container">
