add dessert section with adaprive

--- a/index.html
+++ b/index.html
@@ -963,7 +963,200 @@
         <!-- /.container -->
       </section>
       <!-- /.section macaroon -->
-      <section id="dessert" class="section dessert"></section>
+      <section id="dessert" class="section dessert">
+        <div class="container">
+          <h2 class="section-title dessert__section-title">Десерты</h2>
+          <p class="dessert__description">
+            Далеко-далеко за словесными горами в стране гласных и согласных
+            живут рыбные тексты.
+          </p>
+          <div class="swiper-container dessert__slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide dessert__slider-slide">
+                <div class="card dessert__card">
+                  <a
+                    href="img/dessert/dessert-1.jpg"
+                    class="card__image-link glightbox"
+                  >
+                    <img
+                      class="card__image"
+                      src="img/dessert/dessert-1.jpg"
+                      alt="Грейс"
+                    />
+                  </a>
+                  <h5 class="card__title">грейс</h5>
+                  <ul class="card__list">
+                    <li class="card__list-item">
+                      вологий мигдальний бісквіт з цедрою апельсину
+                    </li>
+                    <li class="card__list-item">хрусткий шар</li>
+                    <li class="card__list-item">
+                      кремю з пюре маракуї та імбирем
+                    </li>
+                    <li class="card__list-item">екзотична карамель з карі</li>
+                    <li class="card__list-item">мус чізкейк з крем-сиром</li>
+                  </ul>
+                </div>
+                <!-- /.card dessert__card -->
+              </div>
+              <!-- ./dessert__slider-slide -->
+              <div class="swiper-slide dessert__slider-slide">
+                <div class="card dessert__card">
+                  <a
+                    href="img/dessert/dessert-2.jpg"
+                    class="card__image-link glightbox"
+                  >
+                    <img
+                      class="card__image"
+                      src="img/dessert/dessert-2.jpg"
+                      alt="Бернард"
+                    />
+                  </a>
+                  <h5 class="card__title">Бернардс</h5>
+                  <ul class="card__list">
+                    <li class="card__list-item">
+                      вологий мигдальний бісквіт з цедрою апельсину
+                    </li>
+                    <li class="card__list-item">хрусткий шар</li>
+                    <li class="card__list-item">
+                      кремю з пюре маракуї та імбирем
+                    </li>
+                    <li class="card__list-item">екзотична карамель з карі</li>
+                    <li class="card__list-item">мус чізкейк з крем-сиром</li>
+                  </ul>
+                </div>
+                <!-- /.card dessert__card -->
+              </div>
+              <!-- ./dessert__slider-slide -->
+              <div class="swiper-slide dessert__slider-slide">
+                <div class="card dessert__card">
+                  <a
+                    href="img/dessert/dessert-3.jpg"
+                    class="card__image-link glightbox"
+                  >
+                    <img
+                      class="card__image"
+                      src="img/dessert/dessert-3.jpg"
+                      alt="Джиммі"
+                    />
+                  </a>
+                  <h5 class="card__title">Джиммі</h5>
+                  <ul class="card__list">
+                    <li class="card__list-item">
+                      вологий мигдальний бісквіт з цедрою апельсину
+                    </li>
+                    <li class="card__list-item">хрусткий шар</li>
+                    <li class="card__list-item">
+                      кремю з пюре маракуї та імбирем
+                    </li>
+                    <li class="card__list-item">екзотична карамель з карі</li>
+                    <li class="card__list-item">мус чізкейк з крем-сиром</li>
+                  </ul>
+                </div>
+                <!-- /.card dessert__card -->
+              </div>
+              <!-- ./dessert__slider-slide -->
+              <div class="swiper-slide dessert__slider-slide">
+                <div class="card dessert__card">
+                  <a
+                    href="img/dessert/dessert-4.jpg"
+                    class="card__image-link glightbox"
+                  >
+                    <img
+                      class="card__image"
+                      src="img/dessert/dessert-4.jpg"
+                      alt="Мей"
+                    />
+                  </a>
+                  <h5 class="card__title">Мей</h5>
+                  <ul class="card__list">
+                    <li class="card__list-item">
+                      вологий мигдальний бісквіт з цедрою апельсину
+                    </li>
+                    <li class="card__list-item">хрусткий шар</li>
+                    <li class="card__list-item">
+                      кремю з пюре маракуї та імбирем
+                    </li>
+                    <li class="card__list-item">екзотична карамель з карі</li>
+                    <li class="card__list-item">мус чізкейк з крем-сиром</li>
+                  </ul>
+                </div>
+                <!-- /.card dessert__card -->
+              </div>
+              <!-- ./dessert__slider-slide -->
+              <div class="swiper-slide dessert__slider-slide">
+                <div class="card dessert__card">
+                  <a
+                    href="img/dessert/dessert-5.jpg"
+                    class="card__image-link glightbox"
+                  >
+                    <img
+                      class="card__image"
+                      src="img/dessert/dessert-5.jpg"
+                      alt="Тотальна Ягода"
+                    />
+                  </a>
+                  <h5 class="card__title">Тотальна Ягода</h5>
+                  <ul class="card__list">
+                    <li class="card__list-item">
+                      вологий мигдальний бісквіт з цедрою апельсину
+                    </li>
+                    <li class="card__list-item">хрусткий шар</li>
+                    <li class="card__list-item">
+                      кремю з пюре маракуї та імбирем
+                    </li>
+                    <li class="card__list-item">екзотична карамель з карі</li>
+                    <li class="card__list-item">мус чізкейк з крем-сиром</li>
+                  </ul>
+                </div>
+                <!-- /.card dessert__card -->
+              </div>
+              <!-- ./dessert__slider-slide -->
+              <div class="swiper-slide dessert__slider-slide">
+                <div class="card dessert__card">
+                  <a
+                    href="img/dessert/dessert-6.jpg"
+                    class="card__image-link glightbox"
+                  >
+                    <img
+                      class="card__image"
+                      src="img/dessert/dessert-6.jpg"
+                      alt="Аво"
+                    />
+                  </a>
+                  <h5 class="card__title">Аво</h5>
+                  <ul class="card__list">
+                    <li class="card__list-item">
+                      вологий мигдальний бісквіт з цедрою апельсину
+                    </li>
+                    <li class="card__list-item">хрусткий шар</li>
+                    <li class="card__list-item">
+                      кремю з пюре маракуї та імбирем
+                    </li>
+                    <li class="card__list-item">екзотична карамель з карі</li>
+                    <li class="card__list-item">мус чізкейк з крем-сиром</li>
+                  </ul>
+                </div>
+                <!-- /.card dessert__card -->
+              </div>
+              <!-- ./dessert__slider-slide -->
+            </div>
+            <!-- ./swiper-wrapper -->
+            <div class="swiper-pagination dessert__slider-pagination"></div>
+
+            <button
+              class="swiper-button-prev dessert__slider-button dessert__slider-button-prev"
+              class="swiper-button-prev cakes__slider-button cakes__slider-button-prev"
+            ></button>
+            <button
+              class="swiper-button-next dessert__slider-button dessert__slider-button-next"
+            ></button>
+          </div>
+          <!-- ./swiper-container -->
+        </div>
+      </section>
       <!-- /.section dessert -->
       <section id="delivery" class="section delivery">
         <div class="container">
